umol-io/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@indigo_0994_C(O)(=O)C(C)(C)O_1d4f.smiles.snap
---
source: umol-io/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: opensmiles
category: opensmiles
opensmiles:
  success: true
  summary:
    sum_formula: C4O3
    atom_count: 7
    bond_count: 6
